--- a/FoodOrderApp/app/build.gradle
+++ b/FoodOrderApp/app/build.gradle
@@ -27,19 +27,20 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-database:19.3.0'
-    implementation 'com.firebaseui:firebase-ui-database:2.1.0'
+    implementation 'com.firebaseui:firebase-ui-database:3.1.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
     implementation 'info.hoang8f:fbutton:1.0.5'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-   api 'commons-codec:commons-codec:1.14'
+    api 'commons-codec:commons-codec:1.14'
     //increase-decrease number button
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
     implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
