--- a/FoodOrderApp/app/src/main/AndroidManifest.xml
+++ b/FoodOrderApp/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         <activity android:name="com.unitarcafe.hegaa.unitarcafe.SignUp" />
         <activity android:name="com.unitarcafe.hegaa.unitarcafe.VendorSignin" />
         <activity
+            android:name="com.unitarcafe.hegaa.unitarcafe.VendorHome"
+         />
+        <activity
             android:name="com.unitarcafe.hegaa.unitarcafe.Home"
             android:label="@string/title_activity_home"
             android:theme="@style/AppTheme" />
