--- a/FoodOrderApp/app/src/main/AndroidManifest.xml
+++ b/FoodOrderApp/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.unitarcafe.hegaa.unitarcafe">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.CALL_PHONE" />
+<!--    <uses-permission android:name="android.permission.CALL_PHONE" />-->
 
     <application
         android:allowBackup="true"
@@ -19,12 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.unitarcafe.hegaa.unitarcafe.SignIn" />
         <activity android:name="com.unitarcafe.hegaa.unitarcafe.SignUp" />
         <activity android:name="com.unitarcafe.hegaa.unitarcafe.VendorSignin" />
-        <activity
-            android:name="com.unitarcafe.hegaa.unitarcafe.VendorHome"
-         />
+        <activity android:name="com.unitarcafe.hegaa.unitarcafe.VendorHome" />
         <activity
             android:name="com.unitarcafe.hegaa.unitarcafe.Home"
             android:label="@string/title_activity_home"
