Added Vendor Home
Signed-off-by: Durairaj Anbarasan <34974605+djraj@users.noreply.github.com>

--- a/FoodOrderApp/app/src/main/AndroidManifest.xml
+++ b/FoodOrderApp/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
         <activity android:name="com.unitarcafe.hegaa.unitarcafe.SignUp" />
         <activity android:name="com.unitarcafe.hegaa.unitarcafe.VendorSignin" />
         <activity android:name="com.unitarcafe.hegaa.unitarcafe.VendorHome" />
+        <activity android:name="com.unitarcafe.hegaa.unitarcafe.VendorFoods" />
+        <activity android:name="com.unitarcafe.hegaa.unitarcafe.VendorOrders" />
         <activity
             android:name="com.unitarcafe.hegaa.unitarcafe.Home"
             android:label="@string/title_activity_home"
