--- a/FoodOrderApp/app/build.gradle
+++ b/FoodOrderApp/app/build.gradle
@@ -20,25 +20,29 @@ android {
 }
 
 repositories {
-    maven { url "https://jitpack.io" }
+//    maven { url "https://repository-achartengine.forge.cloudbees.com/snapshot/" }
 }
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+//    implementation files('libs/achartengine-1.2.0.jar')
     //Add Library
-    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+    implementation group: 'org.achartengine', name: 'achartengine', version: '1.2.0'
     implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-database:19.3.0'
     implementation 'com.firebaseui:firebase-ui-database:3.1.0'
+    implementation 'com.firebaseui:firebase-ui-storage:6.2.0'
     implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
     implementation 'info.hoang8f:fbutton:1.0.5'
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'androidx.viewpager:viewpager:1.0.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
@@ -48,7 +52,6 @@ dependencies {
     api 'commons-codec:commons-codec:1.14'
     //increase-decrease number button
     implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
-    implementation 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     //TestDrawable : To create Text Drawable image
     implementation 'com.amulyakhare:com.amulyakhare.textdrawable:1.0.1'
 }
